[package]
name = "pmacros"
version = "0.1.0"
authors = ["赵宇龙 <zylthinking@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
proc-macro = true

[dependencies]
syn = { version = "1.0.72", features = ["full"] }
quote = "1.0.9"
chrono = "0.4.19"
proc-macro2 = "1.0.27"
backtrace = "0.3.60"